Fix a bug that made css not load on mobile
some how things were order dependent

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -84,7 +84,7 @@ nav ul {
   }
 
   &:before {
-    content: "void (*links)()[] = { ";
+    content: "void (*nav)()[] = { ";
     padding-right: .5em;
   }
   &:after {
